FPET-967: added fortify release id